changed builder to builds

--- a/app/config/nginx.host.example.conf
+++ b/app/config/nginx.host.example.conf
@@ -1,5 +1,5 @@
 server{
-    server_name builder.nebo15.com;
+    server_name builds.nebo15.com;
 
     set $php 127.0.0.1:9000;
     set $env "prod";
