--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "twig/twig": "1.*",
         "nebo15/micro-yii": "dev-master",
-        "monolog/monolog": "1.7.*@dev"
+        "monolog/monolog": "1.7.*@dev",
+        "michelf/php-markdown": "1.4 as 1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
