Fixed name in config

--- a/settings/nginx/prod.conf
+++ b/settings/nginx/prod.conf
@@ -2,13 +2,14 @@ server {
     listen 443 ssl;
     server_name builds.nebo15.com;
 
-    access_log /var/log/www/nebo15.builds.web.access.log;
-    error_log /var/log/www/nebo15.builds.web.error.log;
+    access_log /var/log/www/nebo15.buildserver.web.access.log;
+    error_log /var/log/www/nebo15.buildserver.web.error.log;
 
-    root /www/nebo15.builds.web/www/;
+    root /www/nebo15.buildserver.web/www/;
 
-    client_max_body_size 10m;
-    client_body_buffer_size 10m;
+    sendfile on;
+    client_max_body_size 256M;
+    client_body_buffer_size 256m;
 
     ssl on;
 
