--- a/settings/nginx/prod.conf
+++ b/settings/nginx/prod.conf
@@ -20,8 +20,7 @@ server {
     }
 
     location / {
-        index index.php index.html;
-        autoindex on;
+        index index.php;
     }
 
     location ~ \.php$ {
